1998-12-08  SL Baur  <steve@altair.xemacs.org>

	* libs/Makefile (autoloads): Fix typo.
	(bytecompile): Ditto.

1998-12-06  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules (bytecompile): Add bytecompile target.  Eliminate
	paths on default `XEMACS' and `TAR' binaries.

	* Makefile: Remove special treatment of packages needed for early
	bytecompilation.  Add `autoloads', and `bytecompile' targets.
	Add .PHONY.
	* os/Makefile (PACKAGES): Ditto.
	* oa/Makefile (PACKAGES): Ditto.
	* wp/Makefile (PACKAGES): Ditto.
	* games/Makefile (PACKAGES): Ditto.
	* prog/Makefile (PACKAGES): Ditto.
	* comm/Makefile (PACKAGES): Ditto.
	* libs/Makefile (PACKAGES): Ditto.
	* mule/Makefile (PACKAGES): Ditto.

1998-10-15  Greg Klanderman  <greg@alphatech.com>

	* hack-package-index.el (batch-hack-package-index): update for new 
	package index file format.

1998-10-13  SL Baur  <steve@altair.xemacs.org>

	* package-compile.el: Drop pgnus and irchat entries.

1998-10-12  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules: Fix all references to _pkg.el to refer to it via
	$(AUTOLOAD_PATH).

	* hack-package-index.el: New file.  Dynamically update
	package-get-base.el as tarballs are created.

	* XEmacs.rules: Add install: target.  Add autoloads: target.
	Add support for multiple lisp directories, multiple data directories.

1998-10-11  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules (AUTOLOAD_PATH): New variable.  Defaults to ".".
	Change when the source is in a subdirectory.

1998-10-10  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules (binkit-common): New rule.  Obsoletes the
	individual binkit-* rules.
	- Add support for installing files in lib-src.
	
1998-10-01  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules (SOURCE_FILES_TO_COPY): Add _pkg.el.

1998-09-19  SL Baur  <steve@altair.xemacs.org>

	* XEmacs.rules (EXCLUDES): Add *.orig and *.rej.
	(binkit-sourceinfo): Add texinfo sources.
	(binkit-sourcedatainfo): Ditto.
	When installing add a MANIFEST file.
