@@ -63,14 +63,17 @@
     ("elib" . "libs")
     ("fsf-compat" . "libs")
     ("mail-lib" . "libs")
+    ("sounds-au" . "libs")
+    ("sounds-wav" . "libs")
     ("tooltalk" . "libs")
     ("xemacs-base" . "libs")
     ("xemacs-devel" . "libs")
     ;; mule/*
-    ("mule-base" . "mule")
+    ("edict" . "mule")
     ("egg-its" . "mule")
     ("leim" . "mule")
     ("locale" . "mule")
+    ("mule-base" . "mule")
     ("skk" . "mule")
     ;; prog/*
     ("ada" . "prog")
@@ -79,6 +82,7 @@
     ("debug" . "prog")
     ("ediff" . "prog")
     ("emerge" . "prog")
+    ("jde" . "prog")
     ("pcl-cvs" . "prog")
     ("prog-modes" . "prog")
     ("scheme" . "prog")
@@ -88,6 +92,7 @@
     ("vhdl" . "prog")
     ;; comm/*
     ("bbdb" . "comm")
+    ("eudc" . "comm")
     ("footnote" . "comm")
     ("gnats" . "comm")
     ("gnus" . "comm")
@@ -96,7 +101,6 @@
     ("mew" . "comm")
     ("mh-e" . "comm")
     ("net-utils" . "comm")
-    ("ph" . "comm")
     ;; ("pgnus" . "comm")
     ("rmail" . "comm")
     ("supercite" . "comm")
@@ -110,6 +114,7 @@
     ("mine" . "games")
     ("misc-games" . "games")
     ;; oa/*
+    ("calc" . "oa")
     ("calendar" . "oa")
     ("edit-utils" . "oa")
     ("forms" . "oa")
@@ -134,6 +139,7 @@
     ("auctex" . "wp")
     ("crisp" . "wp")
     ("edt" . "wp")
+    ("reftex" . "wp")
     ("texinfo" . "wp")
     ("textools" . "wp")
     ("tpu" . "wp")
